--- a/index.html
+++ b/index.html
@@ -658,10 +658,10 @@
             <div class="story-text" id="story1">
                 <div class="photo-container">
                     <div class="photo-placeholder">
-                        <img src="https://i.ibb.co/0pvmr0K3/download.jpg" alt="Our Memory" style="width: 100%; height: 100%; object-fit: cover;">
+                        <img src="https://i.ibb.co/kg1KpGjt/Screenshot-2025-11-01-at-12-57-18-PM.png" alt="Our Memory" style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                 </div>
-                <p>From the first moment we talked, I never expected nor believed i deserved love but with you it brought me happiness. I know you love these sanrio characters, just how love you. 💜</p>
+                <p>From the first moment we talk at discord, i was already charmed by voice, but as times goes by i fell in love who u truly are 💜</p>
             </div>
             <button class="next-btn" id="next1" onclick="nextPage(2)">Continue →</button>
         </div>
@@ -678,10 +678,10 @@
             <div class="story-text" id="story2">
                 <div class="photo-container">
                     <div class="photo-placeholder">
-                        <img src="https://i.ibb.co/gZc1RV8n/download.jpg" alt="Our Memory" style="width: 100%; height: 100%; object-fit: cover;">
+                        <img src="" alt="Our Memory" style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                 </div>
-                <p>Just like helping Pochacco, you've helped me grow. Every conversation with you makes me better, happier, more complete. You bring out the best in me Kahit naka pakyu ka. 🌟</p>
+                <p>just like helping Pochacco, you've helped me grow. Every conversation with you makes me better, happier, more complete. You bring out the best in me lagi  🌟</p>
             </div>
             <button class="next-btn" id="next2" onclick="nextPage(3)">Continue →</button>
         </div>
@@ -699,10 +699,10 @@
             <div class="story-text" id="story3">
                 <div class="photo-container">
                     <div class="photo-placeholder">
-                        <img src="https://i.ibb.co/GZKLdTS/5a8b26be-fcd1-42fa-9c97-0a76905e219b.jpg" alt="Our Memory" style="width: 100%; height: 100%; object-fit: cover;">
+                        <img src="" alt="Our Memory" style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                 </div>
-                <p>Together, we create something beautiful - like cooking the perfect recipe but with pictures HAHAHAHAHA. Each moment we share adds flavor to my life. You make everything sweeter. 🌸</p>
+                <p>together, we create something beautiful like how Pompompurin mixed things, you mixed my lonely nights with laughter and joy which makes everything sweeter 🌸</p>
             </div>
             <button class="next-btn" id="next3" onclick="nextPage(4)">Continue →</button>
         </div>
@@ -723,15 +723,15 @@
             <div class="story-text show">
                 <div class="photo-container">
                     <div class="photo-placeholder">
-                        <img src="https://i.ibb.co/hRh7B27m/2fca4edd-a6ba-4919-a00d-0f6079375e93.jpg" alt="Our Memory" style="width: 100%; height: 100%; object-fit: cover;">
+                        <img src="" alt="Our Memory" style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                 </div>
-                <p>You bring light into my life, turning my darkest nights into the brightest days. With you, everything feels possible and right. 🌅</p>
+                <p>you bring light into my life, turning my darkest nights into the brightest days. with you, everything feels possible and right. 🌅</p>
             </div>
             <div class="final-message" id="finalMessage">
-                May I Court You? 💕
+                I love you so much diamond 💕
             </div>
-            <p style="font-size: 18px; color: #888; font-style: italic; margin-top: 20px;">Take all the time you need. Whatever your answer, I'm grateful for you. 🌸✨</p>
+            <p style="font-size: 18px; color: #888; font-style: italic; margin-top: 20px;"> I'm grateful for you. 🌸✨</p>
         </div>
     </div>
 
